# OpenHands-CLI

./: .gitignore  =0.80.0  ACP_README.md  AGENT_CHAT_README.md  Makefile  README.md  SETUP_SUMMARY.md  build.py  build.sh  openhands-acp.spec  openhands-cli.spec  pyproject.toml  repo.md  test_input.py
.github/workflows/: build-test.yml  check-package-versions.yml  cli-build-binary-and-optionally-release.yml  lint.yml  pypi-release.yml  tests.yml
.openhands/microagents/: repo.md
hooks/: rthook_profile_imports.py
openhands/: __init__.py
openhands_acp/: __init__.py  agent.py  file_operations.py  main.py  session.py  tools.py
openhands_cli/: agent_chat.py  confirmation.py  gui_launcher.py  mcp_ui.py  pt_style.py  runner.py  security.py  setup.py  simple_main.py  textual_app.py  textual_autocomplete.py  textual_dialogs.py  textual_runner.py  textual_settings.py  textual_user_actions.py  textual_visualizer.py  tui.py  tui_agent_chat.py  tui_main.py  tui_visualizer.py  utils.py  version_check.py
openhands_cli/acp/: agent.py  bridge.py  main.py
openhands_cli/acp_impl/: __init__.py  agent.py  bridge.py  debug_client.py  event.py  file_operations.py  main.py  test_utils.py  tools.py  utils.py
openhands_cli/argparsers/: main_parser.py
openhands_cli/listeners/: pause_listener.py
scripts/: jsonrpc_cli.py
tests/: __init__.py  conf_test.py  test_agent_chat.py  test_agent_chat_confirmation.py  test_cli_signature.py  test_cli_user_skills_flags.py  test_confirmation.py  test_confirmation_mode.py  test_conversation_runner.py  test_directory_separation.py  test_exit_session_confirmation.py  test_main.py  test_mcp_config_validation.py  test_packaging.py  test_pause_functionality.py  test_resume_functionality.py  test_session_prompter.py  test_terminal_detection.py  test_tui.py  test_tui_boxes.py  test_utils.py  test_version_check.py
(+50 files in other folders)
